--- a/candle-kernels/Cargo.toml
+++ b/candle-kernels/Cargo.toml
@@ -13,3 +13,8 @@ license = "MIT OR Apache-2.0"
 
 [build-dependencies]
 bindgen_cuda = "0.1.1"
+cc = { version = "1.0", features = ["cuda"] }
+
+[features]
+default = []
+cuda-backward = []
